--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1"
   }
 }
